# Intro-to-ML-and-DM-Group99

./: IMDMM A1 IF 20240910 0852.ipynb  assignment1.py  computed_basic_statistics.csv  computed_pca_components.csv
ML_project2_models comaprison/: README.md  classification.py  pyproject.toml
ML_project2_models comaprison/data/: concrete_dataset.xls
ML_project2_models comaprison/results/: pca_components_analysis.csv
ML_project2_models comaprison/src/concrete_predictions/: main.py
