[project]
name = "dtu2024"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "afristrup", email = "aksel@fristrup.dk" }
]
dependencies = [
    "jax>=0.4.34",
    "flax>=0.10.0",
    "chex>=0.1.87",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "xlrd>=2.0.1",
    "tqdm>=4.66.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dtu2024"]
